--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,6 +7,16 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
+.link{
+  text-decoration: none;
+  color: white;
+}
+
+.link:hover {
+  color: white;
+  text-decoration: none;
+}
+
 :root {
   --blue: #3490dc;
   --indigo: #6574cd;
